# MME

./: CMakeLists.txt  LICENSE  License.md  ReadMe.md
doc/: mme.dox  mme.plant
mama/: mamaEnvConnection.h  mamaEnvEvent.h  mamaEnvGeneral.h  mamaEnvInbox.h  mamaEnvSession.h  mamaEnvSubscription.h  mamaEnvTimer.h  mamaManagedEnvironment.h  mamaSynchronizedMap.h  systree.h
src/: CMakeLists.txt  mamaEnvConnection.c  mamaEnvEvent.c  mamaEnvInbox.c  mamaEnvSession.c  mamaEnvSubscription.c  mamaEnvTimer.c  mamaManagedEnvironment.c  mamaSynchronizedMap.c
